[gd_scene load_steps=5 format=2]

[ext_resource path="res://minigames/catsandwich/assets/cat_sandwich_0013_BG.png" type="Texture" id=1]
[ext_resource path="res://minigames/catsandwich/puzzle.gd" type="Script" id=2]
[ext_resource path="res://minigames/catsandwich/assets/cat_sandwich_0012_Layer-1.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 1024.0

[node name="CatSandwich0013Bg" type="Sprite" parent="Control"]
position = Vector2( 512, 512 )
scale = Vector2( 1.28, 1.28 )
texture = ExtResource( 1 )

[node name="Plate" type="AnimatedSprite" parent="."]
position = Vector2( 512, 900 )
frames = SubResource( 1 )

[node name="SandwichParts" type="Node2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.8
autostart = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
